--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: sans-serif;
+}
+
 /* ----Login----- */
 
 .loginContainer {
@@ -49,4 +53,190 @@ form {
 
 .button {
   padding: 5px;
+}
+
+/* -------chats------------- */
+
+.chatContainer {
+  display: flex;
+  justify-content: center;  
+  align-items: center;
+  height: 100vh;
+  background: rgb(190, 190, 233);
+}
+
+.chatWrapper {
+  width: 60%;
+  border: 1px solid black;
+  display: flex;
+  height: 70vh;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.leftside {
+  flex: 1;
+  background-color: #9b9bf0;
+}
+
+.rightside {
+  flex: 2;
+  border-left: 1px solid black;
+  background-color: white;
+}
+
+.navContainer {
+  background-color: aqua;
+}
+
+.navWrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  align-items: center;
+}
+
+.navMinWrap {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.navMinWrap img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+.navMinWrap button {
+  border: none;
+  cursor: pointer;
+  background: #19191a;
+  color: #fff;
+  padding: 5px;
+  font-size: 12px;
+}
+
+.navWrapper p {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.search {
+  background: #cbcbec;
+  padding: 5px;
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid black;
+}
+
+.searchDiv {
+  padding: 2px;
+  border-bottom: 1px solid black;
+}
+
+.userWrapper img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.userWrapper {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  padding: 5px;
+}
+
+.userContainer:hover {
+  background: grey;
+  cursor: pointer;
+}
+
+.userChat p {
+  font-size: 15px;
+  font-weight: 600;
+}
+.userChat span {
+  font-size: 12px;
+}
+
+.leftUser {
+  overflow: auto;
+  height: 100%;
+}
+
+.leftUser::-webkit-scrollbar {
+  display: none;
+}
+
+.topnavWrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.topnavWrapSm {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.topnavContainer {
+  padding: 10px;
+  background: #9b9bf0;
+  height: 9%;
+}
+
+.inputContainer {
+  height: 9%;
+}
+
+.inputContainer input {
+  width: 100%;
+  padding: 10px;
+}
+
+.userPhoto {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.message {
+  display: flex;
+  gap: 10px;
+}
+
+.messages {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  overflow: scroll;
+  height: 82%;
+  padding: 20px;
+}
+
+.messages::-webkit-scrollbar {
+  display: none;
+}
+
+.message.row {
+  flex-direction: row-reverse;
+}
+
+.messagePhotoTime {
+  display: flex;
+  flex-direction: column;
+}
+
+.messagePhotoTime span {
+  font-size: 14px;
+}
+
+.messageContent {
+  padding: 10px;
+  background: #c3c3e2;
+  height: fit-content;
+  border-radius: 0px 10px 10px 10px;
 }
